feat : jacoco, admin, logging 고도화 적용